// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Proxy /> renders ProxyFooter correctly 1`] = `
<small
  className="text-danger"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="exclamation-triangle"
    pullRight={false}
  />
   Proxy authentication is stored in plain text in the settings file.
</small>
`;

exports[`<Proxy /> renders ProxyOptions correctly 1`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <InputError
        autoComplete={false}
        disabled={true}
        error={null}
        initialValue="test_address"
        label="Address"
        noMargin={true}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={true}
        initialValue="test_username"
        label="Username"
        noMargin={true}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={true}
        initialValue="test_password"
        label="Password"
        noMargin={true}
        type="password"
        withButton={true}
      />
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={0}
        >
          <Checkbox
            checked={false}
            disabled={true}
            label="Trust Environmental Variables"
            onClick={[Function]}
            partial={false}
            pullRight={false}
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={0}
        >
          <Button
            bsStyle="default"
            disabled={true}
            pullRight={true}
            tipPlacement="top"
          >
            <Flex
              alignContent="stretch"
              alignItems="stretch"
              direction="row"
              justifyContent="flex-start"
              wrap="nowrap"
            >
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                shrink={1}
              >
                <ProxyTestIcon
                  address="test_address"
                  enabled={false}
                  password="test_password"
                  proxyTestFailed={false}
                  proxyTestPending={false}
                  proxyTestSucceeded={false}
                  trust={false}
                  username="test_username"
                />
              </FlexItem>
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                pad={true}
                shrink={1}
              >
                Test
              </FlexItem>
            </Flex>
          </Button>
        </FlexItem>
      </Flex>
    </PanelBody>
  }
  description="Configure the server to use a proxy for outgoing requests."
  extraIcon={
    <Checkbox
      checked={false}
      label="Enable"
      onClick={[Function]}
      partial={false}
      pullRight={false}
    />
  }
  footerComponent={<ProxyFooter />}
  title="Proxy"
/>
`;

exports[`<Proxy /> renders ProxyOptions correctly 2`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <InputError
        autoComplete={false}
        disabled={false}
        error="Proxy address is invalid"
        initialValue="test_address"
        label="Address"
        noMargin={true}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={false}
        initialValue="test_username"
        label="Username"
        noMargin={true}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={false}
        initialValue="test_password"
        label="Password"
        noMargin={true}
        type="password"
        withButton={true}
      />
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={0}
        >
          <Checkbox
            checked={false}
            disabled={false}
            label="Trust Environmental Variables"
            onClick={[Function]}
            partial={false}
            pullRight={false}
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={0}
        >
          <Button
            bsStyle="default"
            disabled={false}
            pullRight={true}
            tipPlacement="top"
          >
            <Flex
              alignContent="stretch"
              alignItems="stretch"
              direction="row"
              justifyContent="flex-start"
              wrap="nowrap"
            >
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                shrink={1}
              >
                <ProxyTestIcon
                  address="test_address"
                  enabled={true}
                  password="test_password"
                  proxyTestFailed={true}
                  proxyTestPending={false}
                  proxyTestSucceeded={false}
                  trust={false}
                  username="test_username"
                />
              </FlexItem>
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                pad={true}
                shrink={1}
              >
                Test
              </FlexItem>
            </Flex>
          </Button>
        </FlexItem>
      </Flex>
    </PanelBody>
  }
  description="Configure the server to use a proxy for outgoing requests."
  extraIcon={
    <Checkbox
      checked={true}
      label="Enable"
      onClick={[Function]}
      partial={false}
      pullRight={false}
    />
  }
  footerComponent={<ProxyFooter />}
  title="Proxy"
/>
`;

exports[`<Proxy /> renders ProxyTestIcon correctly show disabled icon when failed 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={false}
  name="ban"
  pullRight={false}
/>
`;

exports[`<Proxy /> renders ProxyTestIcon correctly show loading when pending 1`] = `
<div
  style={
    Object {
      "padding": "0 1px",
    }
  }
>
  <Loader
    color="#333"
    size="12px"
  />
</div>
`;

exports[`<Proxy /> renders ProxyTestIcon correctly show success icon when succeeded 1`] = `
<Icon
  bsStyle="success"
  faStyle="fas"
  fixedWidth={false}
  name="check"
  pullRight={false}
/>
`;

exports[`<Proxy /> renders correctly 1`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <InputError
        autoComplete={false}
        disabled={true}
        error={null}
        initialValue="test_address"
        label="Address"
        noMargin={true}
        onSave={[Function]}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={true}
        initialValue="test_name"
        label="Username"
        noMargin={true}
        onSave={[Function]}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        disabled={true}
        initialValue="test_pass"
        label="Password"
        noMargin={true}
        onSave={[Function]}
        type="password"
        withButton={true}
      />
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          shrink={0}
        >
          <Checkbox
            checked={false}
            disabled={true}
            label="Trust Environmental Variables"
            onClick={[Function]}
            partial={false}
            pullRight={false}
          />
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          shrink={0}
        >
          <Button
            bsStyle="default"
            disabled={true}
            onClick={[Function]}
            pullRight={true}
            tipPlacement="top"
          >
            <Flex
              alignContent="stretch"
              alignItems="stretch"
              direction="row"
              justifyContent="flex-start"
              wrap="nowrap"
            >
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                shrink={1}
              >
                <ProxyTestIcon
                  address="test_address"
                  enabled={false}
                  onTest={[Function]}
                  onToggle={[Function]}
                  onUpdateAddress={[Function]}
                  onUpdatePassword={[Function]}
                  onUpdateTrust={[Function]}
                  onUpdateUsername={[Function]}
                  password="test_pass"
                  proxyTestFailed={false}
                  proxyTestPending={false}
                  proxyTestSucceeded={false}
                  store={
                    Object {
                      "clearActions": [Function],
                      "dispatch": [Function],
                      "getActions": [Function],
                      "getState": [Function],
                      "replaceReducer": [Function],
                      "subscribe": [Function],
                    }
                  }
                  storeSubscription={
                    Subscription {
                      "listeners": Object {
                        "clear": [Function],
                        "get": [Function],
                        "notify": [Function],
                        "subscribe": [Function],
                      },
                      "onStateChange": [Function],
                      "parentSub": undefined,
                      "store": Object {
                        "clearActions": [Function],
                        "dispatch": [Function],
                        "getActions": [Function],
                        "getState": [Function],
                        "replaceReducer": [Function],
                        "subscribe": [Function],
                      },
                      "unsubscribe": [Function],
                    }
                  }
                  trust={false}
                  username="test_name"
                />
              </FlexItem>
              <FlexItem
                alignSelf={null}
                basis="auto"
                grow={0}
                pad={true}
                shrink={1}
              >
                Test
              </FlexItem>
            </Flex>
          </Button>
        </FlexItem>
      </Flex>
    </PanelBody>
  }
  description="Configure the server to use a proxy for outgoing requests."
  extraIcon={
    <Checkbox
      checked={false}
      label="Enable"
      onClick={[Function]}
      partial={false}
      pullRight={false}
    />
  }
  footerComponent={<ProxyFooter />}
  title="Proxy"
/>
`;
